Update comment to reflect existing changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,7 @@ bind-key -r l selectp -R
 bind-key -r j selectp -D
 bind-key -r k selectp -U
 
-# disabled due to Vim not getting correct .zshrc files loaded when starting just Vim and not zsh first!
+# Select OR create Vim session. Can't remember why I needed the stty -ixon setting, but it works, so I've left it.
 bind-key v run 'tmux selectw -t vim || tmux selectw -t vi || tmux neww -n vim "source .zsh/variables.zsh && stty -ixon && vim -c Files"'
 
 set -g base-index 1
