Allow full-window splitting and increase timeout for display-panes.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@
 set -g mouse on
 
 set -g default-terminal 'screen-256color'
+set -g display-panes-time 3000
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Remap C-j to be prefix key, and unbind C-b
@@ -11,8 +12,10 @@ set -g prefix C-Space
 set -g renumber-windows on
 bind-key C-Space last-window
 bind-key r source ~/.tmux.conf \; display "reloaded config"
-bind-key | splitw -h
-bind-key _ splitw -v
+
+# Allow 'full' window splitting.
+bind-key | splitw -hf
+bind-key _ splitw -vf
 
 #Allow Ctrl-Shift arrow-keys to reorder window tabs
 bind-key -r C-S-Left swapw -t -1
