Increase history limit in tmux to 200k lines

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set -g mouse on
 
 set -g default-terminal 'screen-256color'
 set -g display-panes-time 3000
+set -g history-limit 200000
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Remap C-j to be prefix key, and unbind C-b
@@ -29,7 +30,7 @@ bind-key -r k selectp -U
 bind-key v run 'tmux selectw -t vim || tmux selectw -t vi || tmux neww -n vim "source .zsh/variables.zsh && stty -ixon && vim -c Files"'
 
 set -g base-index 1
-setw -g mode-keys vi		# Use Vi keybindings when searching.
+setw -g mode-keys vi # Use Vi keybindings when searching.
 setw -g automatic-rename on
 
 # Source Tmuxline snapshot created through vim-airline and tmuxline.
