set pane base index to 1 as well to match windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,7 @@ bind-key -r k selectp -U
 bind-key v run 'tmux selectw -t vim || tmux selectw -t vi || tmux neww -n vim "source .zsh/variables.zsh && stty -ixon && vim -c Files"'
 
 set -g base-index 1
+set -g base-pane-index 1
 setw -g mode-keys vi # Use Vi keybindings when searching.
 setw -g automatic-rename on
 
