Set status position to top

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,8 @@ set -g mouse on
 set -g default-terminal 'screen-256color'
 set -g display-panes-time 3000
 set -g history-limit 200000
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
+set -g status-position top
 
 # Remap C-j to be prefix key, and unbind C-b
 unbind-key C-b
