Allow tmux access to OSX clipboard
Also change default terminal to tmux from screen to support italics. Add a few
non-standard terminfo settings as well. All are not working yet.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,16 @@
 # Allow mouse resizable panes
 set -g mouse on
 
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'tmux-256color'
+set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
+
+# This will fix the problem with OSX not allowing tmux to use system clipboard.
+# pbcopy/pbpaste and even Vim clipboard registers will not work without this hack.
+# Be sure to install this first from Homebrew as it is not a default command.
+set -g default-command 'reattach-to-user-namespace -l zsh'
+
 set -g display-panes-time 3000
 set -g history-limit 200000
-set -ga terminal-overrides ",xterm-256color:Tc"
 set -g status-position top
 
 # Remap C-j to be prefix key, and unbind C-b
