Enable pbcopy/pbpase keys for buffer management

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,8 +33,12 @@ bind-key -r l selectp -R
 bind-key -r j selectp -D
 bind-key -r k selectp -U
 
+bind-key > run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind-key < run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\""
+
 # Select OR create Vim session. Can't remember why I needed the stty -ixon setting, but it works, so I've left it.
-bind-key v run 'tmux selectw -t vim || tmux selectw -t vi || tmux neww -n vim "source .zsh/variables.zsh && stty -ixon && vim -c Files"'
+# bind-key v run 'tmux selectw -t vim || tmux selectw -t vi || tmux neww -n vim "source .zsh/variables.zsh && stty -ixon && vim -c Files"'
+bind-key v run 'tmux selectw -t vim || tmux selectw -t vi || tmux neww -n vim "stty -ixon && vim -c Files"'
 
 set -g base-index 1
 set -g pane-base-index 1
