Make next/previous window bindings repeatable

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ set -g display-panes-time 3000
 set -g history-limit 200000
 set -g status-position top
 
-# Remap C-j to be prefix key, and unbind C-b
+# Remap ^<space> to be prefix key, and unbind C-b
 unbind-key C-b
 set -g prefix C-Space
 
@@ -25,7 +25,10 @@ bind-key r source ~/.tmux.conf \; display "reloaded config"
 bind-key | splitw -hf
 bind-key _ splitw -vf
 
-#Allow Ctrl-Shift arrow-keys to reorder window tabs
+bind-key -r n selectw -n
+bind-key -r p selectw -p
+
+# Allow Ctrl-Shift arrow-keys to reorder window tabs
 bind-key -r C-S-Left swapw -t -1
 bind-key -r C-S-Right swapw -t +1
 bind-key -r h selectp -L
