--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
 # This will fix the problem with OSX not allowing tmux to use system clipboard.
 # pbcopy/pbpaste and even Vim clipboard registers will not work without this hack.
 # Be sure to install this first from Homebrew as it is not a default command.
-set -g default-command 'reattach-to-user-namespace -l zsh'
+# set -g default-command 'reattach-to-user-namespace -l zsh'
 
 set -g display-panes-time 3000
 set -g history-limit 200000
