Remove reattach-to-user-namespace settings since this appears to be no longer needed in OSX Mojave

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,11 +4,6 @@ set -g mouse on
 set -g default-terminal 'tmux-256color'
 set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
 
-# This will fix the problem with OSX not allowing tmux to use system clipboard.
-# pbcopy/pbpaste and even Vim clipboard registers will not work without this hack.
-# Be sure to install this first from Homebrew as it is not a default command.
-# set -g default-command 'reattach-to-user-namespace -l zsh'
-
 set -g display-panes-time 3000
 set -g history-limit 200000
 set -g status-position top
@@ -36,8 +31,8 @@ bind-key -r l selectp -R
 bind-key -r j selectp -D
 bind-key -r k selectp -U
 
-bind-key > run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind-key < run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\""
+bind-key > run "tmux save-buffer - | pbcopy"
+bind-key < run "tmux set-buffer \"$(pbpaste)\""
 
 # Select OR create Vim session. Can't remember why I needed the stty -ixon setting, but it works, so I've left it.
 # bind-key v run 'tmux selectw -t vim || tmux selectw -t vi || tmux neww -n vim "source .zsh/variables.zsh && stty -ixon && vim -c Files"'
