Make default new window/pane a non-login shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,15 @@
 # Allow mouse resizable panes
 set -g mouse on
 
+# tmux starts a 'login' session by default. By overriding the default-command
+# to have a non-login shell, startup time is improved. But this means you have to start
+# tmux from a shell and not have it as your startup shell in the first please - this is 
+# how I normally start tmux anyway.
+set -g default-command '/usr/local/bin/zsh'
+
+# allow copy-mode selections to be copied to system clipboard
+set -s set-clipboard on
+
 set -g default-terminal 'tmux-256color'
 set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
 
