--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# Allow mouse resizable panes
+# Allminikube start --kubernetes-version=v1.12.0ow mouse resizable panes
 set -g mouse on
 
 # tmux starts a 'login' session by default. By overriding the default-command
@@ -15,7 +15,8 @@ set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
 
 set -g display-panes-time 3000
 set -g history-limit 200000
-set -g status-position top
+# set -g status-position top
+set -g pane-border-status bottom
 
 # Remap ^<space> to be prefix key, and unbind C-b
 unbind-key C-b
