Add pane-border and top-align everything

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
-# Allminikube start --kubernetes-version=v1.12.0ow mouse resizable panes
+# Allow mouse resizable panes
 set -g mouse on
 
 # tmux starts a 'login' session by default. By overriding the default-command
 # to have a non-login shell, startup time is improved. But this means you have to start
-# tmux from a shell and not have it as your startup shell in the first please - this is 
+# tmux from a shell and not have it as your startup shell in the first please - this is
 # how I normally start tmux anyway.
 set -g default-command '/usr/local/bin/zsh'
 
@@ -15,8 +15,6 @@ set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
 
 set -g display-panes-time 3000
 set -g history-limit 200000
-# set -g status-position top
-set -g pane-border-status bottom
 
 # Remap ^<space> to be prefix key, and unbind C-b
 unbind-key C-b
@@ -55,3 +53,13 @@ setw -g automatic-rename on
 
 # Source Tmuxline snapshot created through vim-airline and tmuxline.
 source-file ~/dotfiles/tmuxline.snap
+
+# Set pane title to be current command instead of the default hostname
+setw -g pane-border-format "#{?pane_active,#[reverse],}#{pane_index}#[default] #{pane_current_command}"
+
+# Top-aling borders and titles instead of bottom
+set -g status-position top
+set -g pane-border-status top
+
+# Update titles and status bars every 1 second - 15 seconds by default?
+set -g status-interval 1
