Do not source tmuxline.snap

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,7 +52,7 @@ setw -g mode-keys vi # Use Vi keybindings when searching.
 setw -g automatic-rename on
 
 # Source Tmuxline snapshot created through vim-airline and tmuxline.
-source-file ~/dotfiles/tmuxline.snap
+# source-file ~/dotfiles/tmuxline.snap
 
 # Set pane title to be current command instead of the default hostname
 setw -g pane-border-format "#{?pane_active,#[reverse],}#{pane_index}#[default] #{pane_current_command}"
