Setup manual tmux config color setting intead of relying on tmuxline.snap

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+source-file ~/src/tmux-reset/tmux-reset
+
 # Allow mouse resizable panes
 set -g mouse on
 
@@ -15,12 +17,12 @@ set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
 
 set -g display-panes-time 3000
 set -g history-limit 200000
+set -g renumber-windows on
 
 # Remap ^<space> to be prefix key, and unbind C-b
 unbind-key C-b
 set -g prefix C-Space
 
-set -g renumber-windows on
 bind-key C-Space last-window
 bind-key r source ~/.tmux.conf \; display "reloaded config"
 
@@ -54,8 +56,21 @@ setw -g automatic-rename on
 # Source Tmuxline snapshot created through vim-airline and tmuxline.
 # source-file ~/dotfiles/tmuxline.snap
 
+# Custom Window and pane settings {{{
+# setw -g window-status-current-format "#[fg=colour231,bg=colour235] #I:#W #F #[default]"
+setw -g window-status-separator ""
+setw -g status-bg default
+setw -g window-status-bg "colour235"
+setw -g window-status-format "#[fg=colour240,bg=colour235] #I #W#F #[default]"
+setw -g window-status-current-format "#[fg=colour186,bg=colour235] #I #W#F #[default]"
+
+set -g status-left "#[fg=colour186,bg=colour235] [ #S ] #[default]"
+set -g status-right-length "100"
+set -g status-right "#[fg=colour186,bg=colour235] #(uptime |sed \"s/^.* up /Up /;s/  / /g;s/load averages:/load:/\") | %a %d-%b-%Y %H:%M:%S "
 # Set pane title to be current command instead of the default hostname
 setw -g pane-border-format "#{?pane_active,#[reverse],}#{pane_index}#[default] #{pane_current_command}"
+
+# End of custom settings }}}
 
 # Top-aling borders and titles instead of bottom
 set -g status-position top
@@ -63,3 +78,4 @@ set -g pane-border-status top
 
 # Update titles and status bars every 1 second - 15 seconds by default?
 set -g status-interval 1
+
