Dim tmux status-right segment showing date/time

--- a/tmux.conf
+++ b/tmux.conf
@@ -66,7 +66,7 @@ setw -g window-status-current-format "#[fg=colour186,bg=colour235] #I #W#F #[def
 
 set -g status-left "#[fg=colour186,bg=colour235] [ #S ] #[default]"
 set -g status-right-length "100"
-set -g status-right "#[fg=colour186,bg=colour235] #(uptime |sed \"s/^.* up /Up /;s/  / /g;s/load averages:/load:/\") | %a %d-%b-%Y %H:%M:%S "
+set -g status-right "#[fg=colour186,bg=colour235] #(uptime |sed \"s/^.* up /Up /;s/  / /g;s/load averages:/load:/\") | #[fg=colour240]%a %d-%b-%Y %H:%M:%S "
 # Set pane title to be current command instead of the default hostname
 setw -g pane-border-format "#{?pane_active,#[reverse],}#{pane_index}#[default] #{pane_current_command}"
 
