--- a/tmux.conf
+++ b/tmux.conf
@@ -15,7 +15,11 @@ set -s set-clipboard on
 set -g default-terminal 'tmux-256color'
 set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
 
+# How long (in ms) to display the panes when asked (<prefix>-q)
 set -g display-panes-time 3000
+
+# Display message until key pressed. Otherwise time in ms.
+set -g display-time 0
 set -g history-limit 200000
 set -g renumber-windows on
 
