Revert change to 2000 msec as 0 was too annoying

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,9 @@ set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
 # How long (in ms) to display the panes when asked (<prefix>-q)
 set -g display-panes-time 3000
 
-# Display message until key pressed. Otherwise time in ms.
-set -g display-time 0
+# Display message for 2 secs (0 to leave until key pressed).
+set -g display-time 2000
+
 set -g history-limit 200000
 set -g renumber-windows on
 
