--- a/tmux.conf
+++ b/tmux.conf
@@ -49,12 +49,17 @@ bind-key -r k selectp -U
 bind-key > run "tmux save-buffer - | pbcopy"
 bind-key < run "tmux set-buffer \"$(pbpaste)\""
 
+# use copy-pipe-and-cancel to copy selected text to tmux buffer AND clipboard
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter             send-keys -X copy-pipe-and-cancel "pbcopy"
+
 # Select OR create Vim session. Can't remember why I needed the stty -ixon setting, but it works, so I've left it.
 # bind-key v run 'tmux selectw -t vim || tmux selectw -t vi || tmux neww -n vim "source .zsh/variables.zsh && stty -ixon && vim -c Files"'
 bind-key v run 'tmux selectw -t vim || tmux selectw -t vi || tmux neww -n vim "stty -ixon && vim -c Files"'
 
 set -g base-index 1
 set -g pane-base-index 1
+
 setw -g mode-keys vi # Use Vi keybindings when searching.
 setw -g automatic-rename on
 
