Comment out sourcing of tmux-reset

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-source-file ~/src/tmux-reset/tmux-reset
+# source-file ~/src/tmux-reset/tmux-reset
 
 # Allow mouse resizable panes
 set -g mouse on
