--- a/tmux.conf
+++ b/tmux.conf
@@ -68,15 +68,19 @@ setw -g automatic-rename on
 
 # Custom Window and pane settings {{{
 # setw -g window-status-current-format "#[fg=colour231,bg=colour235] #I:#W #F #[default]"
-setw -g window-status-separator ""
-setw -g status-bg default
-setw -g window-status-bg "colour235"
-setw -g window-status-format "#[fg=colour240,bg=colour235] #I #W#F #[default]"
-setw -g window-status-current-format "#[fg=colour186,bg=colour235] #I #W#F #[default]"
-
-set -g status-left "#[fg=colour186,bg=colour235] [ #S ] #[default]"
+# setw -g window-status-separator ""
+setw -g status-bg colour235
+setw -g status-fg colour2
+# setw -g window-status-bg colour235
+# setw -g window-status-fg colour10
+# setw -g window-status-format "#I #W#F"
+setw -g window-status-current-format "#[reverse]#I#[default]:#W#F"
+#
+# set -g status-left "#[fg=colour186,bg=colour235] [ #S ] #[default]"
+#
+set -g status-right "#(uptime |sed \"s/^.* up /Up /;s/  / /g;s/load averages:/load:/\") | #[fg=colour242]%a %d-%b-%Y %H:%M:%S "
 set -g status-right-length "100"
-set -g status-right "#[fg=colour186,bg=colour235] #(uptime |sed \"s/^.* up /Up /;s/  / /g;s/load averages:/load:/\") | #[fg=colour240]%a %d-%b-%Y %H:%M:%S "
+
 # Set pane title to be current command instead of the default hostname
 setw -g pane-border-format "#{?pane_active,#[reverse],}#{pane_index}#[default] #{pane_current_command}"
 
