Add kubernetes context to window status bar
Also make use of new 'terminal' background color so I don't have to keep
changing exact color codes to not have a different backround when
terminal background changes.

Re-worded comments about login-shell to make it more clear.

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,9 +4,10 @@
 set -g mouse on
 
 # tmux starts a 'login' session by default. By overriding the default-command
-# to have a non-login shell, startup time is improved. But this means you have to start
-# tmux from a shell and not have it as your startup shell in the first please - this is
-# how I normally start tmux anyway.
+# to start a non-login shell, startup time is greatly improved. But this means
+# you have to start tmux manually from an already logged-in shell and not have
+# it as your startup shell in the first place.
+# -- This is how I usually start tmux anyway.
 set -g default-command '/usr/local/bin/zsh'
 
 # allow copy-mode selections to be copied to system clipboard
@@ -66,10 +67,9 @@ setw -g automatic-rename on
 # Source Tmuxline snapshot created through vim-airline and tmuxline.
 # source-file ~/dotfiles/tmuxline.snap
 
-# Custom Window and pane settings {{{
 # setw -g window-status-current-format "#[fg=colour231,bg=colour235] #I:#W #F #[default]"
 # setw -g window-status-separator ""
-setw -g status-bg colour235
+setw -g status-bg "terminal"
 setw -g status-fg colour2
 # setw -g window-status-bg colour235
 # setw -g window-status-fg colour10
@@ -78,13 +78,15 @@ setw -g window-status-current-format "#[reverse]#I#[default]:#W#F"
 #
 # set -g status-left "#[fg=colour186,bg=colour235] [ #S ] #[default]"
 #
-set -g status-right "#(uptime |sed \"s/^.* up /Up /;s/  / /g;s/load averages:/load:/\") | #[fg=colour242]%a %d-%b-%Y %H:%M:%S "
+kubectx=" #[fg=blue]\u2388  #[fg=default]#(kubectl config current-context)"
+set -g status-right "#(uptime |sed \"s/^.* up /Up /;s/  / /g;s/load averages:/load:/\") |$kubectx"
 set -g status-right-length "100"
+
+# set -g status-left "$kubectx"
+# set -g status-left-length 50
 
 # Set pane title to be current command instead of the default hostname
 setw -g pane-border-format "#{?pane_active,#[reverse],}#{pane_index}#[default] #{pane_current_command}"
-
-# End of custom settings }}}
 
 # Top-aling borders and titles instead of bottom
 set -g status-position top
@@ -92,4 +94,3 @@ set -g pane-border-status top
 
 # Update titles and status bars every 1 second - 15 seconds by default?
 set -g status-interval 1
-
