Add title to window panes
Also (again) changed .local to .lan in $HOSTNAME

--- a/tmux.conf
+++ b/tmux.conf
@@ -86,7 +86,7 @@ set -g status-right-length "100"
 # set -g status-left-length 50
 
 # Set pane title to be current command instead of the default hostname
-setw -g pane-border-format "#{?pane_active,#[reverse],}#{pane_index}#[default] #{pane_current_command}"
+setw -g pane-border-format "#{?pane_active,#[reverse],}#{pane_index}#[default] #T #{pane_current_command}"
 
 # Top-aling borders and titles instead of bottom
 set -g status-position top
