Change icon used in kubectl context

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,7 +78,7 @@ setw -g window-status-current-format "#[reverse]#I#[default]:#W#F"
 #
 # set -g status-left "#[fg=colour186,bg=colour235] [ #S ] #[default]"
 #
-kubectx=" #[fg=blue]\u2388  #[fg=default]#(kubectl config current-context)"
+kubectx=" #[fg=blue]\ufd31  #[fg=default]#(kubectl config current-context)"
 set -g status-right "#(uptime |sed \"s/^.* up /Up /;s/  / /g;s/load averages:/load:/\") |$kubectx"
 set -g status-right-length "100"
 
