Updated tmux.conf and zshrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,15 +6,20 @@ set -g mouse on
 # tmux starts a 'login' session by default. By overriding the default-command
 # to start a non-login shell, startup time is greatly improved. But this means
 # you have to start tmux manually from an already logged-in shell and not have
-# it as your startup shell in the first place.
+# tmux as your startup shell in the first place.
 # -- This is how I usually start tmux anyway.
-set -g default-command '/usr/local/bin/zsh'
+set -g default-command '/bin/zsh'
 
 # allow copy-mode selections to be copied to system clipboard
 set -s set-clipboard on
 
-set -g default-terminal 'tmux-256color'
-set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
+set -g default-terminal "tmux-256color"
+# set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
+# set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+
+# default statusbar colors
+set-option -g status-bg colour235
+set-option -g status-fg colour179
 
 # How long (in ms) to display the panes when asked (<prefix>-q)
 set -g display-panes-time 3000
@@ -69,28 +74,29 @@ setw -g automatic-rename on
 
 # setw -g window-status-current-format "#[fg=colour231,bg=colour235] #I:#W #F #[default]"
 # setw -g window-status-separator ""
-setw -g status-bg "terminal"
-setw -g status-fg colour2
+# setw -g status-bg "terminal"
+# setw -g status-fg colour2
 # setw -g window-status-bg colour235
-# setw -g window-status-fg colour10
-# setw -g window-status-format "#I #W#F"
-setw -g window-status-current-format "#[reverse]#I#[default]:#W#F"
+# setw -g window-status-fg colour179
+setw -g window-status-format "#I:#W#F"
+setw -g window-status-current-format "#[bold]#I:#W#F"
 #
 # set -g status-left "#[fg=colour186,bg=colour235] [ #S ] #[default]"
 #
-kubectx=" #[fg=blue]\ufd31  #[fg=default]#(kubectl config current-context)"
-set -g status-right "#(uptime |sed \"s/^.* up /Up /;s/  / /g;s/load averages:/load:/\") |$kubectx"
-set -g status-right-length "100"
+# kubectx=" #[fg=blue]\ufd31  #[fg=default]#(kubectl config current-context)"
+# set -g status-right "#(uptime |sed \"s/^.* up /Up /;s/  / /g;s/load averages:/load:/\") |$kubectx"
+# set -g status-right-length "100"
 
 # set -g status-left "$kubectx"
 # set -g status-left-length 50
 
 # Set pane title to be current command instead of the default hostname
-setw -g pane-border-format "#{?pane_active,#[reverse],}#{pane_index}#[default] #T #{pane_current_command}"
-
+setw -g pane-border-format "#{?pane_active,#[reverse],}#{pane_index}#[default] #{pane_current_command}"
+set -g status-right "%a %d-%b-%Y (v.%V) -- %H:%M "
 # Top-aling borders and titles instead of bottom
-set -g status-position top
+# set -g status-position top
 set -g pane-border-status top
 
 # Update titles and status bars every 1 second - 15 seconds by default?
 set -g status-interval 1
+set -g repeat-time 1000
