Remove copy selection to clipboard config lines
Seems to work without these lines. Maybe added in a later version of
tmux that I have missed.

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,9 +55,11 @@ bind-key -r k selectp -U
 bind-key > run "tmux save-buffer - | pbcopy"
 bind-key < run "tmux set-buffer \"$(pbpaste)\""
 
+# Below doesn't seem to be required anymore.
 # use copy-pipe-and-cancel to copy selected text to tmux buffer AND clipboard
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi Enter             send-keys -X copy-pipe-and-cancel "pbcopy"
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+# bind-key -T copy-mode-vi Enter             send-keys -X copy-pipe-and-cancel "pbcopy"
+# bind-key -T copy-mode MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 
 # Select OR create Vim session. Can't remember why I needed the stty -ixon setting, but it works, so I've left it.
 # bind-key v run 'tmux selectw -t vim || tmux selectw -t vi || tmux neww -n vim "source .zsh/variables.zsh && stty -ixon && vim -c Files"'
