Add newer TrueColor support to tmux terminal features
Also fixed some errors reported by Neovim :checkhealth

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,3 @@
-# source-file ~/src/tmux-reset/tmux-reset
-
 # Allow mouse resizable panes
 set -g mouse on
 
@@ -13,7 +11,14 @@ set -g default-command '/bin/zsh'
 # allow copy-mode selections to be copied to system clipboard
 set -s set-clipboard on
 
+# tmux-256color supports italic text inside of tmux sessions
 set -g default-terminal "tmux-256color"
+
+# tell Tmux that outside terminal supports true color - tmux 3.2 or higher
+set-option -as terminal-features ",xterm-256color:RGB"
+
+# Older tmux way of setting outside terminal support for TrueColor (Tc)
+# set -ga terminal-overrides ",tmux-256color:Tc"
 # set -ga terminal-overrides ',tmux*:Cs:Cr:Tc:Ms:Ss:Se'
 # set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
@@ -102,3 +107,7 @@ set -g pane-border-status top
 # Update titles and status bars every 1 second - 15 seconds by default?
 set -g status-interval 1
 set -g repeat-time 1000
+
+# Fix issues reported by Neovim :checkhealth
+set-option -g focus-events on
+set-option -sg escape-time 10
